unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/CyberSource_Create_Subscription__mdt.object-meta.xml
<CustomObject>
    <label>CyberSource Create Subscription</label>
    <pluralLabel>CyberSource Create Subscription</pluralLabel>
</CustomObject>