unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/ProductionMerchantId__c.field-meta.xml
<CustomField>
    <fullName>ProductionMerchantId__c</fullName>
    <label>Production Merchant Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>