unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/ProductionTransactionSecurityKey__c.field-meta.xml
<CustomField>
    <fullName>ProductionTransactionSecurityKey__c</fullName>
    <label>Production Transaction Security Key</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>