unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/ProductionURL__c.field-meta.xml
<CustomField>
    <fullName>ProductionURL__c</fullName>
    <label>Production URL</label>
    <type>Url</type>
</CustomField>