unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/SandboxMerchantId__c.field-meta.xml
<CustomField>
    <fullName>SandboxMerchantId__c</fullName>
    <label>Sandbox Merchant Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>