unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/SandboxTransactionSecurityKey__c.field-meta.xml
<CustomField>
    <fullName>SandboxTransactionSecurityKey__c</fullName>
    <label>Sandbox Transaction Security Key</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>