unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/SandboxURL__c.field-meta.xml
<CustomField>
    <fullName>SandboxURL__c</fullName>
    <label>Sandbox URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>