unpackaged/main/default/objects/CyberSource_Create_Subscription__mdt/fields/UseProductionConfigurations__c.field-meta.xml
<CustomField>
    <fullName>UseProductionConfigurations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseProductionConfigurations</label>
    <type>Checkbox</type>
</CustomField>